--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^3.0.3
   go_router: ^17.0.0
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
