--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_riverpod: ^3.0.3
   go_router: ^17.0.0
   shared_preferences: ^2.5.4
+  google_fonts: ^6.3.3
 
 dev_dependencies:
   flutter_test:
